Broad structure setup

--- a/index.html
+++ b/index.html
@@ -2,4 +2,24 @@
 
 <html>
 
+<head>
+    <title>Andrea&rsquo;s Portfolio</title>
+    <link href="css/reset.css" rel="stylesheet" />
+    <link href="css/stylesheet.css" rel="stylesheet" />
+</head>
+
+<body>
+    <nav class="portfolio-nav">
+    </nav>
+
+    <section class="portfolio-row">
+    </section>
+
+    <section class="portfolio-about">
+    </section>
+
+    <footer class="portfolio-footer">
+    </footer>
+</body>
+
 </html>
