--- a/index.html
+++ b/index.html
@@ -8,14 +8,41 @@
     <link href="css/stylesheet.css" rel="stylesheet" />
 </head>
 
-<body>
+<body class="portfolio">
     <nav class="portfolio-nav">
+        <div class="portfolio-nav-name">Andrea Leigh Williamson</div>
+        <div class="portfolio-nav-links">
+            <a class="portfolio-nav-link" href="#portfolio-row">PORTFOLIO</a>
+            <a class="portfolio-nav-link" href="#portfolio-about">ABOUT</a>
+            <a class="portfolio-nav-link" href="#portfolio-footer">CONTACT</a>
+        </div>
     </nav>
 
     <section class="portfolio-row">
+        <a class="portfolio-icon" href="#">
+            <div class="portfolio-icon-title">Mockup: School Landing Page</div>
+        </a>
+        <a class="portfolio-icon" href="#">
+            <div class="portfolio-icon-title">Mockup: School Analytics</div>
+        </a>
+        <a class="portfolio-icon" href="#">
+            <div class="portfolio-icon-title">Testive Color Guide</div>
+        </a>
+        <a class="portfolio-icon" href="#">
+            <div class="portfolio-icon-title">Prototype: School Landing Page</div>
+        </a>
+        <a class="portfolio-icon" href="#">
+            <div class="portfolio-icon-title">Prototype: Testive Home Page</div>
+        </a>
+        <a class="portfolio-icon" href="#">
+            <div class="portfolio-icon-title">Small App Projects: Modals</div>
+        </a>
     </section>
 
     <section class="portfolio-about">
+        <h2 class="portfolio-about-title">ABOUT ANDREA</h2>
+        <p class="portfolio-about-blurb">Andrea is a UX/UI Designer who lives in Cambridge, MA. I thrive on teamwork and enjoy solving complex design problems. My design process includes listening to users/stakeholders/developers, iterating through many ideas and rough sketches, and making decisions based on user needs/research. I am meticulous with visual design and strive to create beautiful and intuitive user experiences.</p>
+        <a class="portfolio-about-download-cv" href="#">ANDREA&rsquo;S CV</a>
     </section>
 
     <footer class="portfolio-footer">
