Added png/gif files to icons

--- a/index.html
+++ b/index.html
@@ -20,21 +20,27 @@
 
     <section class="portfolio-row">
         <a class="portfolio-icon" href="#">
+            <img class="portfolio-icon-image" src="images/mockup1-screenshot.png" alt="mockup: school landing page" />
             <div class="portfolio-icon-title">Mockup: School Landing Page</div>
         </a>
         <a class="portfolio-icon" href="#">
+            <img class="portfolio-icon-image" src="images/mockup2-screenshot.png" alt="mockup: school analytics" />
             <div class="portfolio-icon-title">Mockup: School Analytics</div>
         </a>
         <a class="portfolio-icon" href="#">
+            <img class="portfolio-icon-image" src="images/color-guide-screenshot.png" alt="testive color guide" />
             <div class="portfolio-icon-title">Testive Color Guide</div>
         </a>
         <a class="portfolio-icon" href="#">
+            <img class="portfolio-icon-image" src="images/prototype1-gif.gif" alt="prototype: school landing page" />
             <div class="portfolio-icon-title">Prototype: School Landing Page</div>
         </a>
         <a class="portfolio-icon" href="#">
+            <img class="portfolio-icon-image" src="images/prototype2-gif.gif" alt="prototype: testive home page" />
             <div class="portfolio-icon-title">Prototype: Testive Home Page</div>
         </a>
         <a class="portfolio-icon" href="#">
+            <img class="portfolio-icon-image" src="images/modals-screenshot.png" alt="small app projects: modals" />
             <div class="portfolio-icon-title">Small App Projects: Modals</div>
         </a>
     </section>
