Styling for nav & portfolio icons

--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 <html>
 
 <head>
+    <link href='https://fonts.googleapis.com/css?family=Roboto:400,300,700' rel='stylesheet' type='text/css' />
     <title>Andrea&rsquo;s Portfolio</title>
     <link href="css/reset.css" rel="stylesheet" />
     <link href="css/stylesheet.css" rel="stylesheet" />
+
 </head>
 
 <body class="portfolio">
@@ -21,27 +23,27 @@
     <section class="portfolio-row">
         <a class="portfolio-icon" href="#">
             <img class="portfolio-icon-image" src="images/mockup1-screenshot.png" alt="mockup: school landing page" />
-            <div class="portfolio-icon-title">Mockup: School Landing Page</div>
+            <div class="portfolio-icon-title">Mockup:<br>School Landing Page</div>
         </a>
         <a class="portfolio-icon" href="#">
             <img class="portfolio-icon-image" src="images/mockup2-screenshot.png" alt="mockup: school analytics" />
-            <div class="portfolio-icon-title">Mockup: School Analytics</div>
+            <div class="portfolio-icon-title">Mockup:<br>School Analytics</div>
         </a>
         <a class="portfolio-icon" href="#">
             <img class="portfolio-icon-image" src="images/color-guide-screenshot.png" alt="testive color guide" />
-            <div class="portfolio-icon-title">Testive Color Guide</div>
+            <div class="portfolio-icon-title">Branding:<br>Testive Color Guide</div>
         </a>
         <a class="portfolio-icon" href="#">
             <img class="portfolio-icon-image" src="images/prototype1-gif.gif" alt="prototype: school landing page" />
-            <div class="portfolio-icon-title">Prototype: School Landing Page</div>
+            <div class="portfolio-icon-title">Prototype:<br>School Landing Page</div>
         </a>
         <a class="portfolio-icon" href="#">
             <img class="portfolio-icon-image" src="images/prototype2-gif.gif" alt="prototype: testive home page" />
-            <div class="portfolio-icon-title">Prototype: Testive Home Page</div>
+            <div class="portfolio-icon-title">Prototype:<br>Testive Home Page</div>
         </a>
         <a class="portfolio-icon" href="#">
             <img class="portfolio-icon-image" src="images/modals-screenshot.png" alt="small app projects: modals" />
-            <div class="portfolio-icon-title">Small App Projects: Modals</div>
+            <div class="portfolio-icon-title">Small App Projects:<br>Modal Designs</div>
         </a>
     </section>
 
