v1 of portfolio footer structure/style

--- a/index.html
+++ b/index.html
@@ -47,13 +47,19 @@
         </a>
     </section>
 
-    <section class="portfolio-about">
-        <h2 class="portfolio-about-title">ABOUT ANDREA</h2>
-        <p class="portfolio-about-blurb">Andrea is a UX/UI Designer who lives in Cambridge, MA. I thrive on teamwork and enjoy solving complex design problems. My design process includes listening to users/stakeholders/developers, iterating through many ideas and rough sketches, and making decisions based on user needs/research. I am meticulous with visual design and strive to create beautiful and intuitive user experiences.</p>
-        <a class="portfolio-about-download-cv" href="#">ANDREA&rsquo;S CV</a>
-    </section>
-
     <footer class="portfolio-footer">
+        <section class="portfolio-footer-about">
+            <h2 class="portfolio-footer-about-title">ABOUT ANDREA</h2>
+            <p class="portfolio-about-blurb">I am a UX/UI Designer in Cambridge, MA. I enjoy solving complex design problems and thrive on teamwork. I have experience with an education startup and have also previously worked in healthcare. My diverse work history gives me a unique perspective on the importance of collaboration and empathy. <a class="portfolio-footer-download-cv" href="#">Download my resume</a></p>
+        </section>
+        <section class="portfolio-footer-contact">
+            <div class="portfolio-footer-social-media">
+                <a class="portfolio-footer-social-media-icon" href="#"><img src="images/linkedin.svg" alt="linkedin"></a>
+                <a class="portfolio-footer-social-media-icon" href="#"><img src="images/dribbble.svg" alt="dribbble"></a>
+                <a class="portfolio-footer-social-media-icon" href="#"><img src="images/github.svg" alt="github"></a>
+            </div>
+            <h5 class="portfolio-footer-email">leigh.andrea@gmail.com</h5>
+        </section>
     </footer>
 </body>
 
