v2 of nav, portfolio body

--- a/index.html
+++ b/index.html
@@ -12,11 +12,13 @@
 
 <body class="portfolio">
     <nav class="portfolio-nav">
-        <div class="portfolio-nav-name">Andrea Leigh Williamson</div>
+        <section class="portfolio-nav-left-side">
+            <h1 class="portfolio-nav-name">Andrea Leigh Williamson</h1>
+            <img class="portfolio-nav-title" src="images/about-me.gif" alt="about me" />
+        </section>
         <div class="portfolio-nav-links">
             <a class="portfolio-nav-link" href="#portfolio-row">PORTFOLIO</a>
-            <a class="portfolio-nav-link" href="#portfolio-about">ABOUT</a>
-            <a class="portfolio-nav-link" href="#portfolio-footer">CONTACT</a>
+            <a class="portfolio-nav-link" href="#portfolio-row">ABOUT/CONTACT</a>
         </div>
     </nav>
 
