v1 of modals for portfolio pieces

--- a/index.html
+++ b/index.html
@@ -23,36 +23,126 @@
     </nav>
 
     <section class="portfolio-row" id="portfolio">
-        <a class="portfolio-icon" href="#">
+        <button class="portfolio-icon">
             <img class="portfolio-icon-image" src="images/mockup1-screenshot.png" alt="mockup: school landing page" />
             <div class="portfolio-icon-title">Mockup:<br>School Landing Page</div>
-        </a>
-        <a class="portfolio-icon" href="#">
+        </button>
+        <div class="portfolio-modal">
+            <div class="portfolio-modal-content">
+                <div class="portfolio-modal-header">
+                    <h3>Mockup: School Landing Page</h3>
+                    <span class="portfolio-modal-close-icon">&times;</span>
+                </div>
+                <div class="portfolio-modal-body">
+                    <img class="portfolio-modal-gif" src="images/school-landing-page-mockup-preview.gif" alt="school landing page mockup preview" />
+                    <p class="portfolio-modal-paragraph">This mockup was made for Testive, Inc. It is a high fidelity mockup that I created in Adobe Illustrator and exported as a PDF file. It depicts a custom landing page for high schools that were considering signing up to study for the SAT/ACT with Testive.</p>
+                    <p class="portfolio-modal-paragraph">The final product followed a series of low-fidelity mockups (paper and pencil drawings), collaboration with project developers, and feedback from Testive&rsquo;s Director of School Partnerships, who worked closely with school administrators and teachers.</p>
+                    <a class="portfolio-modal-link" href="https://github.com/andrealeigh/testive_portfolio/raw/master/high_fidelity_mockups/school_landing_page.pdf">Download Mockup</a>
+                    <a class="portfolio-modal-link" href="https://github.com/andrealeigh/testive_portfolio#school-landing-page-mockup" target="_blank">Read full details on Github</a>
+                 </div>
+            </div>
+        </div>
+        <button class="portfolio-icon">
             <img class="portfolio-icon-image" src="images/mockup2-screenshot.png" alt="mockup: school analytics" />
             <div class="portfolio-icon-title">Mockup:<br>School Analytics</div>
-        </a>
-        <a class="portfolio-icon" href="#">
+        </button>
+        <div class="portfolio-modal">
+            <div class="portfolio-modal-content">
+                <div class="portfolio-modal-header">
+                    <h3>Mockup: School Analytics Dashboard</h3>
+                    <span class="portfolio-modal-close-icon">&times;</span>
+                </div>
+                <div class="portfolio-modal-body">
+                    <img class="portfolio-modal-gif" src="images/school-analytics-mockup-preview.gif" alt="school analytics mockup preview" />
+                    <p class="portfolio-modal-paragraph">This mockup was made for Testive, Inc. It is a high fidelity mockup that I created in Adobe Illustrator and exported as a PDF file. It depicts an analytics dashboard for high schools with students studying for the SAT/ACT using Testive software.</p>
+                    <p class="portfolio-modal-paragraph">The final product followed a series of low-fidelity mockups (paper and pencil drawings), collaboration with project developers, and feedback from Testive&rsquo;s Director of School Partnerships, who worked closely with school administrators and teachers.</p>
+                    <a class="portfolio-modal-link" href="https://github.com/andrealeigh/testive_portfolio/raw/master/high_fidelity_mockups/school_analytics.pdf">Download Mockup</a>
+                    <a class="portfolio-modal-link" href="https://github.com/andrealeigh/testive_portfolio#school-analytics-mockup" target="_blank">Read full details on Github</a>
+                 </div>
+            </div>
+        </div>
+        <button class="portfolio-icon">
             <img class="portfolio-icon-image" src="images/color-guide-screenshot.png" alt="testive color guide" />
             <div class="portfolio-icon-title">Branding:<br>Testive Color Guide</div>
-        </a>
-        <a class="portfolio-icon" href="#">
+        </button>
+        <div class="portfolio-modal">
+            <div class="portfolio-modal-content">
+                <div class="portfolio-modal-header">
+                    <h3>Branding: Testive Color Guide</h3>
+                    <span class="portfolio-modal-close-icon">&times;</span>
+                </div>
+                <div class="portfolio-modal-body">
+                    <img class="portfolio-modal-gif" src="images/testive-color-guide-preview.gif" alt="testive color guide" />
+                    <p class="portfolio-modal-paragraph">This was a style guide I made after I noticed that Testive&rsquo;s development and marketing team were using varied hex values for colors. In order to encourage standardized usage of colors across Testive&rsquo;s website, app, and marketing tools, I created a style guide with specific hex values, names for each color, and suggested use cases.</p>
+                    <p class="portfolio-modal-paragraph">In addition to suggested use cases, I added a few informational bullet points called &ldquo;General Color Advice,&rdquo; which were intended to provide a starting point and a larger discussion of Testive&rsquo;s visual style.</p>
+                    <a class="portfolio-modal-link" href="https://github.com/andrealeigh/testive_portfolio/raw/master/testive_color_guide.pdf">Download Color Guide</a>
+                    <a class="portfolio-modal-link" href="https://github.com/andrealeigh/testive_portfolio#testive-color-guide" target="_blank">Read full details on Github</a>
+                 </div>
+            </div>
+        </div>
+        <button class="portfolio-icon">
             <img class="portfolio-icon-image" src="images/prototype1-gif.gif" alt="prototype: school landing page" />
             <div class="portfolio-icon-title">Prototype:<br>School Landing Page</div>
-        </a>
-        <a class="portfolio-icon" href="#">
+        </button>
+        <div class="portfolio-modal">
+            <div class="portfolio-modal-content">
+                <div class="portfolio-modal-header">
+                    <h3>Prototype: School Landing Page</h3>
+                    <span class="portfolio-modal-close-icon">&times;</span>
+                </div>
+                <div class="portfolio-modal-body">
+                    <img class="portfolio-modal-gif" src="images/school-page-prototype-preview.gif" alt="school page prototype preview" />
+                    <p class="portfolio-modal-paragraph">This HTML/SCSS prototype was made for Testive, Inc. It was created as version 1 of the HTML/SCSS associated with the School Landing Page Mockup (top left row of portfolio).</p>
+                    <p class="portfolio-modal-paragraph">This wireframe is not responsive. The landing page would only be accessed on school computers and not on smaller handheld devices (read full details on Github).</p>
+                    <a class="portfolio-modal-link" href="https://andrealeigh.github.io/testive_portfolio/school_landing_page/index.html" target="_blank">Visit website</a>
+                    <a class="portfolio-modal-link" href="https://github.com/andrealeigh/testive_portfolio#testive-home-page-wireframe" target="_blank">Read full details on Github</a>
+                </div>
+            </div>
+        </div>
+        <button class="portfolio-icon">
             <img class="portfolio-icon-image" src="images/prototype2-gif.gif" alt="prototype: testive home page" />
             <div class="portfolio-icon-title">Prototype:<br>Testive Home Page</div>
-        </a>
-        <a class="portfolio-icon" href="#">
+        </button>
+        <div class="portfolio-modal">
+            <div class="portfolio-modal-content">
+                <div class="portfolio-modal-header">
+                    <h3>Prototype: Testive Home Page</h3>
+                    <span class="portfolio-modal-close-icon">&times;</span>
+                </div>
+                <div class="portfolio-modal-body">
+                    <img class="portfolio-modal-gif" src="images/home-page-prototype-preview.gif" alt="home page protoype preview" />
+                    <p class="portfolio-modal-paragraph">This wireframe was intended as version 1 of the HTML/SCSS associated with Testive&rsquo;s new home page. It was a design and content overhaul of the current home page.</p>
+                    <p class="portfolio-modal-paragraph">I collaborated with Marketing and Sales on content and design. The home page went through multiple pen/paper and high fidelity mockups, which was reviewed and approved by Marketing/Sales before the prototype was built.</p>
+                    <a class="portfolio-modal-link" href="https://andrealeigh.github.io/testive_portfolio/testive_home_page/index.html" target="_blank">Visit website</a>
+                    <a class="portfolio-modal-link" href="https://github.com/andrealeigh/testive_portfolio#school-landing-page-mockup" target="_blank">Read full details on Github</a>
+                </div>
+            </div>
+        </div>
+        <button class="portfolio-icon">
             <img class="portfolio-icon-image" src="images/modals-screenshot.png" alt="small app projects: modals" />
             <div class="portfolio-icon-title">Small App Projects:<br>Modal Designs</div>
-        </a>
+        </button>
+        <div class="portfolio-modal">
+            <div class="portfolio-modal-content">
+                <div class="portfolio-modal-header">
+                    <h3>Small App Projects: Modal Designs</h3>
+                    <span class="portfolio-modal-close-icon">&times;</span>
+                </div>
+                <div class="portfolio-modal-body">
+                    <img class="portfolio-modal-gif" src="images/modal-designs-preview.gif" alt="modal designs preview" />
+                    <p class="portfolio-modal-paragraph">This is a screenshot of two modals I designed within the Testive app. Once a month, I changed the modal within the Testive app to reflect the current month.</p>
+                    <p class="portfolio-modal-paragraph">The monthly changes included updating the text content, creating a custom image in Illustrator, and changing the text color to match the new background image. I created the original modal design and HTML/SCSS wireframe, and I paired with a developer for the Javascript functionality.</p>
+                    <a class="portfolio-modal-link" href="https://github.com/andrealeigh/testive_portfolio/raw/master/testive_modals.pdf">Download Mockup</a>
+                    <a class="portfolio-modal-link" href="https://github.com/andrealeigh/testive_portfolio#testive-app-modals-screenshots" target="_blank">Read full details on Github</a>
+                 </div>
+            </div>
+        </div>
     </section>
 
     <footer class="portfolio-footer" id="about">
         <section class="portfolio-footer-about">
             <h2 class="portfolio-footer-about-title">ABOUT ANDREA</h2>
-            <p class="portfolio-about-blurb">I am a UX/UI Designer in Cambridge, MA. I enjoy solving complex design problems and thrive on teamwork. I have experience with an education startup and have also previously worked in healthcare. My diverse work history gives me a unique perspective on the importance of collaboration and empathy. <a class="portfolio-footer-download-cv" href="#">Download my resume</a></p>
+            <p class="portfolio-about-blurb">I am a UX/UI Designer in Cambridge, MA. I enjoy solving complex design problems and thrive on teamwork. I have experience with an education startup and have also previously worked in healthcare. My diverse work history gives me a unique perspective on the importance of collaboration and empathy. <a class="portfolio-footer-download-cv" href="https://github.com/andrealeigh/portfolio/raw/master/UX-UI%20Designer%20Resume.pdf">Download my resume</a></p>
         </section>
         <section class="portfolio-footer-contact">
             <div class="portfolio-footer-social-media">
@@ -65,10 +155,45 @@
     </footer>
 
 
-		<script src="js/smooth-scroll.min.js"></script>
-		<script>
-			smoothScroll.init();
-		</script>
+    <script src="js/smooth-scroll.min.js"></script>
+    <script>
+        smoothScroll.init();
+    </script>
+
+    <script>
+
+        var modals = document.getElementsByClassName("portfolio-modal");
+
+        var defineClicks = function(modal) {
+
+            // Get the button that opens the modals in portfolio
+            var btn = modal.previousElementSibling;
+            // Get the <span> element that closes the modal
+            var span = modal.querySelector('.portfolio-modal-close-icon');
+
+            // When the user clicks the button, open the modal
+            btn.onclick = function() {
+                modal.style.display = "block";
+            }
+
+            // When the user clicks on <span> (x), close the modal
+            span.onclick = function() {
+                modal.style.display = "none";
+            }
+
+        };
+
+        for (var i = 0; i < modals.length; i++) {
+            defineClicks(modals[i]);
+        }
+
+        // When the user clicks anywhere outside of the modal, close it
+        window.onclick = function(event) {
+            if (event.target.className == 'portfolio-modal') {
+                event.target.style.display = "none";
+            }
+        }
+    </script>
 </body>
 
 </html>
