portfolio browser tab icon

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Andrea&rsquo;s Portfolio</title>
     <link href="css/reset.css" rel="stylesheet" />
     <link href="css/stylesheet.css" rel="stylesheet" />
+    <link rel="icon" type="image/png" href="images/portfolio-icon.png" />
 </head>
 
 <body class="portfolio">
