--- a/index.html
+++ b/index.html
@@ -143,7 +143,8 @@
     <footer class="portfolio-footer" id="about">
         <section class="portfolio-footer-about">
             <h2 class="portfolio-footer-about-title">ABOUT ANDREA</h2>
-            <p class="portfolio-about-blurb">I am a UX/UI Designer in Cambridge, MA. I enjoy solving complex design problems and thrive on teamwork. I have experience with an education startup and have also previously worked in healthcare. My diverse work history gives me a unique perspective on the importance of collaboration and empathy. <a class="portfolio-footer-download-cv" href="https://github.com/andrealeigh/portfolio/raw/master/UX-UI%20Designer%20Resume.pdf">Download my resume</a></p>
+            <p class="portfolio-footer-about-blurb ">I am a UX/UI Designer in Cambridge, MA. Graffiti alley, picture above, is a beloved place of mine in Central Square. It is always changing, just like design!</p>
+            <p class="portfolio-footer-about-blurb ">I enjoy solving complex design problems and thrive on teamwork. I have experience with an education startup and have also previously worked in healthcare. My diverse work history gives me a unique perspective on the importance of collaboration and empathy. <a class="portfolio-footer-download-cv" href="https://github.com/andrealeigh/portfolio/raw/master/UX-UI%20Designer%20Resume.pdf">Download my resume</a></p>
         </section>
         <section class="portfolio-footer-contact">
             <div class="portfolio-footer-social-media">
@@ -154,7 +155,6 @@
             <h5 class="portfolio-footer-email">leigh.andrea@gmail.com</h5>
         </section>
     </footer>
-
 
     <script src="js/smooth-scroll.min.js"></script>
     <script>
