Minor style cleanup, media queries

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <div class="portfolio-modal-body">
                     <img class="portfolio-modal-gif" src="images/school-landing-page-mockup-preview.gif" alt="school landing page mockup preview" />
                     <p class="portfolio-modal-paragraph">This mockup was made for Testive, Inc. It is a high fidelity mockup that I created in Adobe Illustrator and exported as a PDF file. It depicts a custom landing page for high schools that were considering signing up to study for the SAT/ACT with Testive.</p>
-                    <p class="portfolio-modal-paragraph">The final product followed a series of low-fidelity mockups (paper and pencil drawings), collaboration with project developers, and feedback from Testive&rsquo;s Director of School Partnerships, who worked closely with school administrators and teachers.</p>
+                    <p class="portfolio-modal-paragraph">The final product followed a series of low-fidelity mockups (paper and pencil drawings), collaboration meetings with project developers, and feedback from Testive&rsquo;s Director of School Partnerships, who worked closely with school administrators and teachers.</p>
                     <a class="portfolio-modal-link" href="https://github.com/andrealeigh/testive_portfolio/raw/master/high_fidelity_mockups/school_landing_page.pdf">Download Mockup</a>
                     <a class="portfolio-modal-link" href="https://github.com/andrealeigh/testive_portfolio#school-landing-page-mockup" target="_blank">Read full details on Github</a>
                  </div>
@@ -55,8 +55,8 @@
                 </div>
                 <div class="portfolio-modal-body">
                     <img class="portfolio-modal-gif" src="images/school-analytics-mockup-preview.gif" alt="school analytics mockup preview" />
-                    <p class="portfolio-modal-paragraph">This mockup was made for Testive, Inc. It is a high fidelity mockup that I created in Adobe Illustrator and exported as a PDF file. It depicts an analytics dashboard for high schools with students studying for the SAT/ACT using Testive software.</p>
-                    <p class="portfolio-modal-paragraph">The final product followed a series of low-fidelity mockups (paper and pencil drawings), collaboration with project developers, and feedback from Testive&rsquo;s Director of School Partnerships, who worked closely with school administrators and teachers.</p>
+                    <p class="portfolio-modal-paragraph">This mockup was made for Testive, Inc. It is a high fidelity mockup that I created in Adobe Illustrator and exported as a PDF file. It depicts an analytics dashboard that helps high school teachers track students using Testive software to study for the SAT/ACT.</p>
+                    <p class="portfolio-modal-paragraph">The final product followed a series of low-fidelity mockups (paper and pencil drawings), collaboration meetings with project developers, and feedback from Testive&rsquo;s Director of School Partnerships, who worked closely with school administrators and teachers.</p>
                     <a class="portfolio-modal-link" href="https://github.com/andrealeigh/testive_portfolio/raw/master/high_fidelity_mockups/school_analytics.pdf">Download Mockup</a>
                     <a class="portfolio-modal-link" href="https://github.com/andrealeigh/testive_portfolio#school-analytics-mockup" target="_blank">Read full details on Github</a>
                  </div>
@@ -93,10 +93,10 @@
                 </div>
                 <div class="portfolio-modal-body">
                     <img class="portfolio-modal-gif" src="images/school-page-prototype-preview.gif" alt="school page prototype preview" />
-                    <p class="portfolio-modal-paragraph">This HTML/SCSS prototype was made for Testive, Inc. It was created as version 1 of the HTML/SCSS associated with the School Landing Page Mockup (top left row of portfolio).</p>
-                    <p class="portfolio-modal-paragraph">This wireframe is not responsive. The landing page would only be accessed on school computers and not on smaller handheld devices (read full details on Github).</p>
+                    <p class="portfolio-modal-paragraph">This HTML/SCSS prototype was made for Testive, Inc. It was version 1 of the HTML/SCSS associated with the School Landing Page Mockup, which is also here in my portfolio (click on the item in the top left corner of my portfolio).</p>
+                    <p class="portfolio-modal-paragraph">The gray box in the second row is a video placeholder. This wireframe for desktop only: The landing page would only be accessed on school computers and not on smaller handheld devices (read full details on Github).</p>
                     <a class="portfolio-modal-link" href="https://andrealeigh.github.io/testive_portfolio/school_landing_page/index.html" target="_blank">Visit website</a>
-                    <a class="portfolio-modal-link" href="https://github.com/andrealeigh/testive_portfolio#testive-home-page-wireframe" target="_blank">Read full details on Github</a>
+                    <a class="portfolio-modal-link" href="https://github.com/andrealeigh/testive_portfolio#school-landing-page-wireframe" target="_blank">Read full details on Github</a>
                 </div>
             </div>
         </div>
@@ -112,10 +112,10 @@
                 </div>
                 <div class="portfolio-modal-body">
                     <img class="portfolio-modal-gif" src="images/home-page-prototype-preview.gif" alt="home page protoype preview" />
-                    <p class="portfolio-modal-paragraph">This wireframe was intended as version 1 of the HTML/SCSS associated with Testive&rsquo;s new home page. It was a design and content overhaul of the current home page.</p>
+                    <p class="portfolio-modal-paragraph">This HTML/SCSS prototype was made for Testive, Inc. It was version 1 of Testive&rsquo;s new home page redesign, which included new content and an overhaul of the user interface.</p>
                     <p class="portfolio-modal-paragraph">I collaborated with Marketing and Sales on content and design. The home page went through multiple pen/paper and high fidelity mockups, which was reviewed and approved by Marketing/Sales before the prototype was built.</p>
                     <a class="portfolio-modal-link" href="https://andrealeigh.github.io/testive_portfolio/testive_home_page/index.html" target="_blank">Visit website</a>
-                    <a class="portfolio-modal-link" href="https://github.com/andrealeigh/testive_portfolio#school-landing-page-mockup" target="_blank">Read full details on Github</a>
+                    <a class="portfolio-modal-link" href="https://github.com/andrealeigh/testive_portfolio#testive-home-page-wireframe" target="_blank">Read full details on Github</a>
                 </div>
             </div>
         </div>
@@ -131,8 +131,8 @@
                 </div>
                 <div class="portfolio-modal-body">
                     <img class="portfolio-modal-gif" src="images/modal-designs-preview.gif" alt="modal designs preview" />
-                    <p class="portfolio-modal-paragraph">This is a screenshot of two modals I designed within the Testive app. Once a month, I changed the modal within the Testive app to reflect the current month.</p>
-                    <p class="portfolio-modal-paragraph">The monthly changes included updating the text content, creating a custom image in Illustrator, and changing the text color to match the new background image. I created the original modal design and HTML/SCSS wireframe, and I paired with a developer for the Javascript functionality.</p>
+                    <p class="portfolio-modal-paragraph">This is a screenshot of two modals I designed within the Testive app. Once a month, I changed the modal within the Testive app to reflect the current month&rsquo;s offer.</p>
+                    <p class="portfolio-modal-paragraph">The monthly changes included updating the text content, creating a custom image in Illustrator, and changing the text color to match the new background image. Each month, I created a new modal design and HTML/SCSS prototype, and I paired with a developer to enable Javascript functionality.</p>
                     <a class="portfolio-modal-link" href="https://github.com/andrealeigh/testive_portfolio/raw/master/testive_modals.pdf">Download Mockup</a>
                     <a class="portfolio-modal-link" href="https://github.com/andrealeigh/testive_portfolio#testive-app-modals-screenshots" target="_blank">Read full details on Github</a>
                  </div>
@@ -148,9 +148,9 @@
         </section>
         <section class="portfolio-footer-contact">
             <div class="portfolio-footer-social-media">
-                <a class="portfolio-footer-social-media-icon" href="https://www.linkedin.com/in/andrea-leigh-williamson"><img src="images/linkedin.svg" target="_blank" alt="linkedin"></a>
-                <a class="portfolio-footer-social-media-icon" href="https://dribbble.com/AndreaLeigh111"><img src="images/dribbble.svg" target="_blank" alt="dribbble"></a>
-                <a class="portfolio-footer-social-media-icon" href="https://github.com/andrealeigh"><img src="images/github.svg" target="_blank" alt="github"></a>
+                <a class="portfolio-footer-social-media-icon" href="https://www.linkedin.com/in/andrea-leigh-williamson" target="_blank"><img src="images/linkedin.svg" alt="linkedin"></a>
+                <a class="portfolio-footer-social-media-icon" href="https://dribbble.com/AndreaLeigh111" target="_blank"><img src="images/dribbble.svg" alt="dribbble"></a>
+                <a class="portfolio-footer-social-media-icon" href="https://github.com/andrealeigh" target="_blank"><img src="images/github.svg" alt="github"></a>
             </div>
             <h5 class="portfolio-footer-email">leigh.andrea@gmail.com</h5>
         </section>
