--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="en">
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -12,6 +12,7 @@
 </head>
 
 <body class="portfolio">
+
     <nav class="portfolio-nav">
         <section class="portfolio-nav-left-side">
             <h1 class="portfolio-nav-name">Andrea Leigh Williamson</h1>
@@ -26,7 +27,7 @@
     <section class="portfolio-row" id="portfolio">
         <button class="portfolio-icon">
             <img class="portfolio-icon-image" src="images/mockup1-screenshot.png" alt="mockup: school landing page" />
-            <div class="portfolio-icon-title">Mockup:<br>School Landing Page</div>
+            <h2 class="portfolio-icon-title">Mockup:<br>School Landing Page</h2>
         </button>
         <div class="portfolio-modal">
             <div class="portfolio-modal-content">
@@ -45,7 +46,7 @@
         </div>
         <button class="portfolio-icon">
             <img class="portfolio-icon-image" src="images/mockup2-screenshot.png" alt="mockup: school analytics" />
-            <div class="portfolio-icon-title">Mockup:<br>School Analytics</div>
+            <h2 class="portfolio-icon-title">Mockup:<br>School Analytics</h2>
         </button>
         <div class="portfolio-modal">
             <div class="portfolio-modal-content">
@@ -64,7 +65,7 @@
         </div>
         <button class="portfolio-icon">
             <img class="portfolio-icon-image" src="images/color-guide-screenshot.png" alt="testive color guide" />
-            <div class="portfolio-icon-title">Branding:<br>Testive Color Guide</div>
+            <h2 class="portfolio-icon-title">Branding:<br>Testive Color Guide</h2>
         </button>
         <div class="portfolio-modal">
             <div class="portfolio-modal-content">
@@ -83,7 +84,7 @@
         </div>
         <button class="portfolio-icon">
             <img class="portfolio-icon-image" src="images/prototype1-gif.gif" alt="prototype: school landing page" />
-            <div class="portfolio-icon-title">Prototype:<br>School Landing Page</div>
+            <h2 class="portfolio-icon-title">Prototype:<br>School Landing Page</h2>
         </button>
         <div class="portfolio-modal">
             <div class="portfolio-modal-content">
@@ -102,7 +103,7 @@
         </div>
         <button class="portfolio-icon">
             <img class="portfolio-icon-image" src="images/prototype2-gif.gif" alt="prototype: testive home page" />
-            <div class="portfolio-icon-title">Prototype:<br>Testive Home Page</div>
+            <h2 class="portfolio-icon-title">Prototype:<br>Testive Home Page</h2>
         </button>
         <div class="portfolio-modal">
             <div class="portfolio-modal-content">
@@ -121,7 +122,7 @@
         </div>
         <button class="portfolio-icon">
             <img class="portfolio-icon-image" src="images/modals-screenshot.png" alt="small app projects: modals" />
-            <div class="portfolio-icon-title">Small App Projects:<br>Modal Designs</div>
+            <h2 class="portfolio-icon-title">Small App Projects:<br>Modal Designs</h2>
         </button>
         <div class="portfolio-modal">
             <div class="portfolio-modal-content">
@@ -142,7 +143,7 @@
 
     <footer class="portfolio-footer" id="about">
         <section class="portfolio-footer-about">
-            <h2 class="portfolio-footer-about-title">ABOUT ANDREA</h2>
+            <h3 class="portfolio-footer-about-title">ABOUT ANDREA</h3>
             <p class="portfolio-footer-about-blurb ">I am a UX/UI Designer in Cambridge, MA. Graffiti alley, picture above, is a beloved place of mine in Central Square. It is always changing, just like design!</p>
             <p class="portfolio-footer-about-blurb ">I enjoy solving complex design problems and thrive on teamwork. I have experience with an education startup and have also previously worked in healthcare. My diverse work history gives me a unique perspective on the importance of collaboration and empathy. <a class="portfolio-footer-download-cv" href="https://github.com/andrealeigh/portfolio/raw/master/UX-UI%20Designer%20Resume.pdf">Download my resume</a></p>
         </section>
@@ -157,12 +158,9 @@
     </footer>
 
     <script src="js/smooth-scroll.min.js"></script>
-    <script>
-        smoothScroll.init();
-    </script>
+    <script>smoothScroll.init();</script>
 
     <script>
-
         var modals = document.getElementsByClassName("portfolio-modal");
 
         var defineClicks = function(modal) {
@@ -195,6 +193,7 @@
             }
         }
     </script>
+
 </body>
 
 </html>
