updated portfolio section

--- a/index.html
+++ b/index.html
@@ -26,6 +26,24 @@
 
     <section class="portfolio-row" id="portfolio">
         <button class="portfolio-icon">
+            <img class="portfolio-icon-image" src="images/call-congress-now-preview.png" alt="mockup: school landing page" />
+            <h2 class="portfolio-icon-title">From idea to live app:<br>Call Congress Now</h2>
+        </button>
+        <div class="portfolio-modal">
+            <div class="portfolio-modal-content">
+                <div class="portfolio-modal-header">
+                    <h3>Call Congress Now</h3>
+                    <span class="portfolio-modal-close-icon">&times;</span>
+                </div>
+                <div class="portfolio-modal-body">
+                    <img class="portfolio-modal-gif" src="images/ccn-prototype-preview.gif" alt="school landing page mockup preview" />
+                    <p class="portfolio-modal-paragraph">Call Congress Now is a responsive web app I designed and co-developed. The purpose of the application is to encourage citizens to call their Representatives and Senators by providing calling information in a user-friendly way.</p>
+                    <p class="portfolio-modal-paragraph">The finished product followed a series of low-fidelity paper &amp; pencil mockups, a high-fidelity mockup created in Adobe Illustrator, and an HTML/CSS prototype. This is an ongoing project that continues to evolve.</p>
+                    <a class="portfolio-modal-link" href="https://www.callcongressnow.org/">Visit Website</a>
+                 </div>
+            </div>
+        </div>
+        <button class="portfolio-icon">
             <img class="portfolio-icon-image" src="images/mockup1-screenshot.png" alt="mockup: school landing page" />
             <h2 class="portfolio-icon-title">Mockup:<br>School Landing Page</h2>
         </button>
@@ -40,7 +58,6 @@
                     <p class="portfolio-modal-paragraph">This mockup was made for Testive, Inc. It is a high fidelity mockup that I created in Adobe Illustrator and exported as a PDF file. It depicts a custom landing page for high schools that were considering signing up to study for the SAT/ACT with Testive.</p>
                     <p class="portfolio-modal-paragraph">The final product followed a series of low-fidelity mockups (paper and pencil drawings), collaboration meetings with project developers, and feedback from Testive&rsquo;s Director of School Partnerships, who worked closely with school administrators and teachers.</p>
                     <a class="portfolio-modal-link" href="https://github.com/andrealeigh/testive_portfolio/raw/master/high_fidelity_mockups/school_landing_page.pdf">Download Mockup</a>
-                    <a class="portfolio-modal-link" href="https://github.com/andrealeigh/testive_portfolio#school-landing-page-mockup" target="_blank">Read full details on Github</a>
                  </div>
             </div>
         </div>
